# marastatic

./: .gitignore  Makefile  README.md  config.toml  marastatic.py  pyproject.toml
example/: config.toml
example/content/blog/: hello-world.md  markdown.md
example/templates/: base.html  index.html  robots.txt  single.html  sitemap.xml
example/templates/blog/: index.html  rss.xml
src/marastatic/: cli.py  config.py
tests/: conftest.py  test_config.py
tests/fixtures/: config.toml  config_with_params.toml
